--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -13,10 +13,10 @@
             <a class="nav-link" routerLinkActive="active" routerLink="mascotas">Mascotas</a>
           </li>
           <li class="nav-item" *ngIf="authService.user['rol'] === 'Cliente'">
-            <a class="nav-link" routerLinkActive="active" routerLink="perfil">Hospedaje</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="hospedaje">Hospedaje</a>
           </li>
           <li class="nav-item" *ngIf="authService.user['rol'] === 'Trabajador'">
-            <a class="nav-link" routerLinkActive="active" routerLink="biblioteca">Atencion</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="hospedaje">Atencion</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="biblioteca">Reseñas</a>
