--- a/frontend/src/app/pages/mascotas/mascota/mascota.component.html
+++ b/frontend/src/app/pages/mascotas/mascota/mascota.component.html
@@ -68,4 +68,16 @@
             <p class="lead">{{mascota.comentario}}</p>
         </div>
     </div>
+    <ng-container *ngIf="estaHospedado">
+      <div class="row mt-3">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+          <h4>Detalles de Hospedaje</h4>
+          <hr>
+          
+        </div>
+        <div class="col-lg-2"></div>
+      </div>
+
+    </ng-container>
 </div>
