--- a/frontend/src/app/pages/mascotas/mascota/mascota.component.html
+++ b/frontend/src/app/pages/mascotas/mascota/mascota.component.html
@@ -68,13 +68,41 @@
             <p class="lead">{{mascota.comentario}}</p>
         </div>
     </div>
-    <ng-container *ngIf="estaHospedado">
+    <ng-container *ngIf="estaHospedado && !this.loading">
       <div class="row mt-3">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
           <h4>Detalles de Hospedaje</h4>
           <hr>
-          
+          <table class="table table-bordered">
+            <thead class="table-dark">
+              <tr>
+                <th>Fecha de Inicio</th>
+                <th>Fecha de Retorno</th>
+                <th>Cuidador</th>
+                <th>Telefono de Cuidador</th>
+                <th>Estado Actual</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>{{mascota.fecha_atencion | date}}</td>
+                <td>{{mascota.fecha_devolucion | date}}</td>
+                <td *ngIf="hayTrabajador">{{ trabajador.nombre }} {{ trabajador.apellido }}</td>
+                <td *ngIf="!hayTrabajador">Aun no hay cuidador designado.</td>
+                <td>{{ hayTrabajador ? trabajador.telefono : "-" }}</td>
+                <td>
+                  <span class="badge text-bg-success">
+                    {{ mascota.estado }}
+                  </span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="d-flex justify-content-end mt-3">
+            <button class="btn btn-sm btn-primary" *ngIf="authService.user['rol'] === 'Cliente'" (click)="recogerMascota()">Recoger Mascota</button>
+            <button class="btn btn-sm btn-warning" *ngIf="authService.user['rol'] === 'Trabajador' && authService.user['id_usuario'] === mascota.id_trabajador" (click)="actualizarEstado()">Actualizar Estado</button>
+          </div>
         </div>
         <div class="col-lg-2"></div>
       </div>
