--- a/frontend/src/app/pages/mascotas/mascotas.component.html
+++ b/frontend/src/app/pages/mascotas/mascotas.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-lg-10">
-      <h1>Mis Mascotas</h1>
+      <h1>{{isCliente ? "Mis Mascotas" : "Mascotas a Atender"}}</h1>
     </div>
     <div class="col-lg-2">
       <div class="d-grid gap-2">
