--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -12,18 +12,18 @@
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="mascotas">Mascotas</a>
           </li>
-          <li class="nav-item" *ngIf="authService.user['rol'] === 'Cliente'">
-            <a class="nav-link" routerLinkActive="active" routerLink="hospedaje">Hospedaje</a>
-          </li>
           <li class="nav-item" *ngIf="authService.user['rol'] === 'Trabajador'">
-            <a class="nav-link" routerLinkActive="active" routerLink="hospedaje">Atencion</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="hospedaje">Atención</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="biblioteca">Reseñas</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="perfil">Perfil</a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="resenas">Reseñas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="biblioteca">Tienda</a>
-          </li>
+            <a class="nav-link" routerLinkActive="active" routerLink="tienda">Tienda</a>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" (click)="cerrarSesion()">Cerrar Sesión</a>
           </li>
