--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -18,12 +18,13 @@
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="perfil">Perfil</a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" routerLinkActive="active" routerLink="resenas">Reseñas</a>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" *ngIf="authService.user['rol'] === 'Cliente'" routerLink="resenas">Reseñas</a>
+            <a class="nav-link" routerLinkActive="active" *ngIf="authService.user['rol'] === 'Trabajador'" [routerLink]="['trabajador', authService.user['id_usuario']]">Reseñas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="tienda">Tienda</a>
-          </li> -->
+          </li>
           <li class="nav-item">
             <a class="nav-link" (click)="cerrarSesion()">Cerrar Sesión</a>
           </li>
