test e2e de login implementado

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -24,7 +24,7 @@
                 </div>
               </div>
             </div>
-            <div class="alert alert-danger mt-2" *ngIf="showAlert">
+            <div id="alert" class="alert alert-danger mt-2" *ngIf="showAlert">
               {{ alertMessage }}
             </div>
             <div class="d-flex justify-content-between mt-2">
