--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <main class="container mt-5">
     <header class="pb-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
-          <span class="fs-4">Bienvenido {{ authService.user['nombre'] }} {{ authService.user['apellido'] }}</span>
+          <span id="titulo" class="fs-4">Bienvenido {{ authService.user['nombre'] }} {{ authService.user['apellido'] }}</span>
         </a>
       </header>
     <div class="row align-items-md-strech">
