--- a/frontend/src/app/modals/resena-modal/resena-modal.component.html
+++ b/frontend/src/app/modals/resena-modal/resena-modal.component.html
@@ -20,7 +20,7 @@
       </label>
     </div>
     <div class="col-lg">
-      <textarea class="form-control form-control-sm" [(ngModel)]="resena" cols="30" rows="5"></textarea>
+      <textarea id="textResena" class="form-control form-control-sm" [(ngModel)]="resena" cols="30" rows="5"></textarea>
     </div>
   </div>
 
@@ -31,7 +31,7 @@
       </label>
     </div>
     <div class="col-lg-3">
-      <input type="number" class="form-control form-control-sm" [(ngModel)]="calificacion">
+      <input id="inputCali" type="number" class="form-control form-control-sm" [(ngModel)]="calificacion">
     </div>
     <div class="col-lg-3">
        /5
@@ -45,7 +45,7 @@
   
   <div class="d-flex justify-content-end mt-4">
       <button class="btn btn-secondary mx-2" (click)="activeModal.dismiss()">Cancelar</button>
-      <button class="btn btn-primary" [disabled]="notValidModal" (click)="activeModal.close(result)">Confirmar</button>
+      <button id="btnConfResena" class="btn btn-primary1" [disabled]="notValidModal" (click)="activeModal.close(result)">Confirmar</button>
   </div>
 
 </div>
