--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -35,7 +35,7 @@
           </div>
           <div class="col-lg">
             <label class="form-label">Telefono</label>
-            <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidTelefono}" formControlName="telefono">
+            <input id="inputTel" type="text" class="form-control" [ngClass]="{'is-invalid': notValidTelefono}" formControlName="telefono">
             <div class="invalid-feedback">
               Telefono es requerido
             </div>   
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-end mt-3">
-          <button class="btn btn-primary" [disabled]="usuarioForm.invalid" (click)="saveUser()">Actualizar</button>
+          <button id="btnConfActualizar" class="btn btn-primary" [disabled]="usuarioForm.invalid" (click)="saveUser()">Actualizar</button>
         </div>
       </form>
     </div>
