--- a/frontend/src/app/pages/resenas/resenas.component.html
+++ b/frontend/src/app/pages/resenas/resenas.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-lg-2">
       <div class="d-grid gap-2">
-        <button class="btn btn-primary" (click)="crearResena()">Deja tu Reseña</button>
+        <button id="btnDejarResena" class="btn btn-primary" (click)="crearResena()">Deja tu Reseña</button>
       </div>
     </div>
   </div>
