--- a/frontend/src/app/pages/tienda/producto-form/producto-form.component.html
+++ b/frontend/src/app/pages/tienda/producto-form/producto-form.component.html
@@ -17,14 +17,14 @@
         <div class="row mt-2">
           <div class="col-lg">
             <label class="form-label">Nombre</label>
-            <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidNombre}" formControlName="nombre">
+            <input id="inputNombreProducto" type="text" class="form-control" [ngClass]="{'is-invalid': notValidNombre}" formControlName="nombre">
             <div class="invalid-feedback">
               Nombre es requerido
             </div>   
           </div>
           <div class="col-lg">
             <label class="form-label">Precio</label>
-            <input type="number" class="form-control" [ngClass]="{'is-invalid': notValidPrecio}" formControlName="precio">
+            <input id="inputPrecioProducto"  type="number" class="form-control" [ngClass]="{'is-invalid': notValidPrecio}" formControlName="precio">
             <div class="invalid-feedback">
               Precio es requerido
             </div>
@@ -33,14 +33,14 @@
         <div class="row mt-2">
           <div class="col-lg">
             <label class="form-label">Descripcion</label>
-            <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidDescripcion}" formControlName="descripcion">
+            <input id="inputDescpProducto" type="text" class="form-control" [ngClass]="{'is-invalid': notValidDescripcion}" formControlName="descripcion">
             <div class="invalid-feedback">
               Descripcion es requerido
             </div>   
           </div>
           <div class="col-lg">
             <label class="form-label">Cantidad</label>
-            <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidCantidad}" formControlName="cantidad">
+            <input id="inputCantProducto" type="text" class="form-control" [ngClass]="{'is-invalid': notValidCantidad}" formControlName="cantidad">
             <div class="invalid-feedback">
               Cantidad es requerida
             </div>
@@ -49,14 +49,14 @@
         <div class="row mt-2">
           <div class="col-lg">
             <label class="form-label">Imagen</label>
-            <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidImagen}" formControlName="imagen">
+            <input id="inputImgProducto" type="text" class="form-control" [ngClass]="{'is-invalid': notValidImagen}" formControlName="imagen">
             <div class="invalid-feedback">
               Imagen es requerida
             </div>
           </div>
         </div>
         <div class="d-flex justify-content-end mt-2">
-          <button type="button" class="btn btn-primary" [disabled]="productoForm.invalid" (click)="crearProducto()">Crear Producto</button>
+          <button id="btnConfiProdu" type="button" class="btn btn-primary" [disabled]="productoForm.invalid" (click)="crearProducto()">Crear Producto</button>
         </div>
       </form>
     </div>
