--- a/frontend/src/app/modals/hospedar-mascota-modal/hospedar-mascota-modal.component.html
+++ b/frontend/src/app/modals/hospedar-mascota-modal/hospedar-mascota-modal.component.html
@@ -13,12 +13,12 @@
   
   <div class="d-flex justify-content-center my-3">
       <label class="form-label">Fecha de retorno</label>
-      <input type="date" class="form-control" [(ngModel)]="fechaRetorno">
+      <input id="fechaHospedarMascota" type="date" class="form-control" [(ngModel)]="fechaRetorno">
   </div>
   
   <div class="d-flex justify-content-end">
       <button class="btn btn-secondary mx-2" (click)="activeModal.dismiss()">Cancelar</button>
-      <button class="btn btn-primary" [disabled]="!fechaRetorno" (click)="activeModal.close(fechaRetorno)">Confirmar</button>
+      <button id="btnConrifmarHospedaje" class="btn btn-primary" [disabled]="!fechaRetorno" (click)="activeModal.close(fechaRetorno)">Confirmar</button>
   </div>
 
 </div>
