--- a/frontend/src/app/pages/mascotas/mascota-form/mascota-form.component.html
+++ b/frontend/src/app/pages/mascotas/mascota-form/mascota-form.component.html
@@ -18,14 +18,14 @@
           <div class="row mt-2">
             <div class="col-lg">
               <label class="form-label">Nombre(s)</label>
-              <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidNombre}" formControlName="nombre">
+              <input id="inNombreMascota" type="text" class="form-control" [ngClass]="{'is-invalid': notValidNombre}" formControlName="nombre">
               <div class="invalid-feedback">
                 Nombre es requerido
               </div>   
             </div>
             <div class="col-lg">
               <label class="form-label">Edad</label>
-              <input type="number" class="form-control" [ngClass]="{'is-invalid': notValidEdad}" formControlName="edad">
+              <input id="inEdadMascota" type="number" class="form-control" [ngClass]="{'is-invalid': notValidEdad}" formControlName="edad">
               <div class="invalid-feedback">
                 Edad es requerida
               </div>
@@ -34,14 +34,14 @@
           <div class="row mt-2">
             <div class="col-lg">
               <label class="form-label">Especie</label>
-              <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidEspecie}" formControlName="especie">
+              <input id="inEspecieMascota" type="text" class="form-control" [ngClass]="{'is-invalid': notValidEspecie}" formControlName="especie">
               <div class="invalid-feedback">
                 Especie es requerida
               </div>   
             </div>
             <div class="col-lg">
               <label class="form-label">Raza</label>
-              <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidRaza}" formControlName="raza">
+              <input id="inRazaMascota" type="text" class="form-control" [ngClass]="{'is-invalid': notValidRaza}" formControlName="raza">
               <div class="invalid-feedback">
                 Raza es requerida
               </div>
@@ -50,30 +50,30 @@
           <div class="row mt-2">
             <div class="col-lg">
               <label class="form-label">Comportamiento</label>
-              <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidComprtamiento}" formControlName="comportamiento">
+              <input id="inComportamientoMascota" type="text" class="form-control" [ngClass]="{'is-invalid': notValidComprtamiento}" formControlName="comportamiento">
               <div class="invalid-feedback">
                 Comportamiento es requerido
               </div>   
             </div>
             <div class="col-lg">
               <label class="form-label">Contacto de Veterinario</label>
-              <input type="text" class="form-control" [ngClass]="{'is-invalid': notValidContactoVet}" formControlName="contactoVet">
+              <input id="inContactoVetMascota" type="text" class="form-control" [ngClass]="{'is-invalid': notValidContactoVet}" formControlName="contactoVet">
               <div class="invalid-feedback">
-                Contacto del veterinario es requerida
+                Contacto del veterinario es requerido
               </div>
             </div>
           </div>
           <div class="row mt-2">
             <div class="col-lg">
               <label class="form-label">Comentario</label>
-              <textarea cols="30" rows="5" class="form-control" [ngClass]="{'is-invalid': notValidComentario}" formControlName="comentario"></textarea>
+              <textarea id="inComentarioMascota" cols="30" rows="5" class="form-control" [ngClass]="{'is-invalid': notValidComentario}" formControlName="comentario"></textarea>
               <div class="invalid-feedback">
                 Comentario es requerido
               </div>   
             </div>
           </div>
           <div class="d-flex justify-content-end mt-2">
-            <button type="button" class="btn btn-primary" [disabled]="mascotaForm.invalid" (click)="guardarMascota()">{{ isNew ? "Crear Mascota" : "Actualizar" }}</button>
+            <button id="btnGuardarMascota" type="button" class="btn btn-primary" [disabled]="mascotaForm.invalid" (click)="guardarMascota()">{{ isNew ? "Crear Mascota" : "Actualizar" }}</button>
           </div>
         </form>
       </div>
