--- a/frontend/src/app/modals/resena-modal/resena-modal.component.html
+++ b/frontend/src/app/modals/resena-modal/resena-modal.component.html
@@ -45,7 +45,7 @@
   
   <div class="d-flex justify-content-end mt-4">
       <button class="btn btn-secondary mx-2" (click)="activeModal.dismiss()">Cancelar</button>
-      <button id="btnConfResena" class="btn btn-primary1" [disabled]="notValidModal" (click)="activeModal.close(result)">Confirmar</button>
+      <button id="btnConfResena" class="btn btn-primary btn-primary1" [disabled]="notValidModal" (click)="activeModal.close(result)">Confirmar</button>
   </div>
 
 </div>
